--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,11 +26,15 @@ button{
     background-color: #1d7044 ;
     color: white;
     border: transparent;
-    width: 290px;
+    width: 100px;
     border-radius: 6px;
     padding: 10px;
     margin-top: 10px;
     
+}
+
+#botao_cadastro{
+    width: 290px;
 }
 
 button:houver{
@@ -49,11 +53,10 @@ button:houver{
 #titulo{
     font-size: large;
 }
-#header1{
+#header-1{
     display: flex;
-    flex-direction: column;
-
     font-size: large;
+    
 }
 
 
@@ -62,4 +65,8 @@ button:houver{
     background-color: #1d7044;
     width: 100%;
     padding: 3%;
+}
+
+.hidden{
+    display: none;
 }
